--- a/src/pages/AcademiesPages/AcademyWrapper/ScheduleSection/ScheduleCardsWrapper/ScheduleColumn/schedule-column.scss
+++ b/src/pages/AcademiesPages/AcademyWrapper/ScheduleSection/ScheduleCardsWrapper/ScheduleColumn/schedule-column.scss
@@ -16,6 +16,32 @@
       }
     }
 
+    @include mobile-breakpoint {
+      @include flex-box($direction: column, $align-items: center);
+    }
+  }
+
+  &__large-screen {
+    @include mobile-breakpoint {
+      display: none;
+    }
+
     column-gap: $spacer-l;
+    display: flex;
+  }
+
+  &__small-screen {
+    @include mobile-breakpoint {
+      display: block;
+      justify-content: center;
+    }
+
+    display: none;
+    margin-bottom: $spacer-l;
+  }
+
+  &__button-container {
+    margin-top: $spacer-l;
+    text-align: center;
   }
 }
