--- a/src/pages/AcademiesPages/AcademyWrapper/ScheduleSection/schedule-section.scss
+++ b/src/pages/AcademiesPages/AcademyWrapper/ScheduleSection/schedule-section.scss
@@ -2,6 +2,10 @@
 @import '~/sass/utilities/mixins';
 
 .schedule-section {
+  @include mobile-breakpoint {
+    margin: to-rem(50) auto to-rem(50);
+  }
+
   margin: to-rem(250) auto to-rem(290);
   max-width: to-rem(1184);
   position: relative;
@@ -12,6 +16,10 @@
   }
 
   &__top-particles {
+    @include mobile-breakpoint {
+      display: none;
+    }
+
     left: to-rem(48);
     position: absolute;
     transform: translateY(-50%);
@@ -20,6 +28,10 @@
   }
 
   &__bottom-particles {
+    @include mobile-breakpoint {
+      display: none;
+    }
+
     left: to-rem(314);
     position: absolute;
     transform: translateY(38%);
